1998-07-22  Markus Wuebben  <markus@kde.org>

	* main.cpp Applied session management patch.
 	* kmfolder.cpp Applied fseek patch for solaris

1998-07-03  Stefan Taferner  <taferner@kde.org>

	* PGP: fixed crash when no ~/.pgp/pubring.pgp is installed
	and signed message is selected.

1998-06-30  Stefan Taferner  <taferner@kde.org> (KMail-0.7.9)

	* PGP: removed dialog asking for pass phrase when only
	signed message was given, added missing asking for pass
	phrase when encrypted/signed message is sent.

	* Composer: fixed bug that showed busy pointer all the
	time with auto-append-signature set and no signature file
	given.

	* Composer: removed mSendImmediate which seems unused
	in the composer nowadays. Simplified code of slotSend,
	slotSendNow, and slotSendLater (to be easier consistent).

1998-06-29  Stefan Taferner  <taferner@kde.org> (KMail-0.7.8)

	* Config: writeConfig() was not called when windows
	got closed. Now it is.

1998-06-27  Markus Wuebben <markus@kde.org>

	* kmcomposewin.cpp (applyChanges): add false to applyChanges to
	avoid segfault on ALPHAs.

1998-06-24  Stefan Taferner  <taferner@kde.org>

	* Pgp detection simplified and bugfixed.

	* Folder status messages for index creation and
	compacting folder reduced from every 100th to every 10th.

1998-06-23  Markus Wuebben  <markus@kde.org> (KMail-0.7.7)

	* removed various unnecessary assert()s. and replaced them
	with if()s. Especially in functions that return void this
	is very helpfull and makes kmail more stable.

	* Checked return values with if()s for some functions to
	make sure that we run into to trouble with those problems.
	
1998-06-23  Stefan Taferner  <taferner@kde.org> (KMail-0.7.7)

	* Removed lots of old debug messages.

	* Composer: answering the confirmation is no longer
	ignored.

	* Finetuning: added missing pixmaps to makefile and
	repainted pixmap for queued and sent messages.

	* Composer: changed behaviour of email completion a bit.